# rwa-audit

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
artifacts/audits/: article3-xstocks-2026-06-12
artifacts/data/: bridged_value_sum.json  coingecko_dex_cex_ratio_monthly.json  depth_vs_volume_panel.csv  depth_vs_volume_panel_publish.csv  feasibility_report.md  gecko_aaplx_pools.json  gecko_spyx_pools.json  gecko_tslax_pools.json  jupiter_quote_aaplx_100k.json  manifest.json  rwa-token-timeseries-export-1781314094816.csv  rwa_activity_daily_30d.csv  (+9 more)
config/: sources.yaml
crates/rwa-audit/: Cargo.toml
crates/rwa-audit/src/: activity.rs  asset_config.rs  assets.rs  client.rs  collect.rs  config.rs  evm.rs  lib.rs  metrics.rs  models.rs  output.rs
crates/rwa-audit/src/audit/: cli.rs  mod.rs  modules.rs
crates/rwa-audit/src/core/: bundle.rs  manifest.rs  mod.rs  publish.rs
crates/rwa-audit/src/exchange/: bridged.rs  config.rs  freeze.rs  mod.rs  output.rs  reference.rs  rwa_xyz.rs
crates/rwa-audit/src/flow/: config.rs  gecko.rs  jupiter.rs  mod.rs  output.rs  panel.rs  paraswap.rs  reference.rs  stats.rs  tx_recon.rs
crates/rwa-audit/src/sources/: adapter.rs  cache.rs  capability.rs  context.rs  fetch.rs  mod.rs  profile.rs  provenance.rs  registry.rs  test_support.rs  transport.rs  types.rs
crates/rwa-audit/src/sources/adapters/: coingecko.rs  ethplorer.rs  geckoterminal.rs  jupiter.rs  mod.rs  paraswap.rs  rpc.rs  yahoo.rs
crates/rwa-audit/src/tools/: io.rs  mod.rs  types.rs
crates/rwa-audit/src/tools/exchange/: compression.rs  equivalence.rs  mod.rs
crates/rwa-audit/src/tools/registry/: activity.rs  classify.rs  mod.rs  sender_coverage.rs  workflow.rs
crates/rwa-audit/tests/: audit_cli.rs  bundle.rs  exchange_live.rs  flow_stats.rs  pipeline.rs  sources.rs  tools_integration.rs
docs/: ARCHITECTURE.md  PUBLISH.md
scripts/: git-sync.sh
(+20 files in other folders)
