[package]
name = "rwa-audit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "On-chain data collection for RWA tokenization audit"

[lib]
name = "rwa_audit"
path = "src/lib.rs"

[[bin]]
name = "rwa-collect"
path = "src/bin/collect.rs"

[[bin]]
name = "rwa-activity"
path = "src/bin/activity.rs"

[[bin]]
name = "rwa-flow-panel"
path = "src/bin/flow_panel.rs"

[[bin]]
name = "rwa-flow-quotes"
path = "src/bin/flow_quotes.rs"

[[bin]]
name = "rwa-flow-tx"
path = "src/bin/flow_tx.rs"

[[bin]]
name = "rwa-exchange-freeze"
path = "src/bin/exchange_freeze.rs"

[[bin]]
name = "rwa-freeze"
path = "src/bin/freeze.rs"

[[bin]]
name = "rwa-audit"
path = "src/bin/rwa-audit.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
fs2 = "0.4"
